# bb3d

./: .gitignore  CMakeLists.txt  Liste des Tâches - Projet biobazard3d.htm  README.md  astro_bazard_scene.json  bugs.md  build_error.txt  build_log.txt  code_review.md  code_review_report.md  codereview.md  engine_config.json  fix_shadows.py  flip_obj.py  gemini.html  gemini.md  generate_house.py  hello_world.cpp  imgui.ini  inspect_glb.py  perf_optimization.md  roadmap.md  snippets.md  temp.txt  temp_files.txt  todo.html  todo.md  todo_joltphysics.md  todo_optimization.md  todo_optimization.md.bak  vulkan_optimization.html
.agent/skills/brainstorming/: SKILL.md
.agent/skills/planification/: SKILL.md
.agent/skills/vulkan-cpp/: SKILL.md
.agent/skills/vulkan-cpp/examples/: init_context.md
.agent/skills/vulkan-cpp/scripts/: compile_shaders.sh  compile_slang.sh
.agents/skills/cpp_pro/: SKILL.md
.agents/skills/createur_de_competences/: SKILL.md
.agents/skills/vulkan-cpp/: SKILL.md
.agents/skills/vulkan-cpp/resources/: sync_patterns.md
.gemini/: setting.json  settings.json
apps/: CMakeLists.txt  bb3d_editor.cpp  bb3d_hello_world.cpp
apps/astro_bazard/: CommRelay.hpp  OrbitalGravity.cpp  OrbitalGravity.hpp  SmartCamera.cpp  SmartCamera.hpp  SpaceshipController.cpp  SpaceshipController.hpp  main.cpp
apps/bb3d_editor/: main.cpp
apps/bb3d_hello_world/: main.cpp
assets/shaders/: pbr.frag  pbr.vert  simple_3d.vert  texture_cube.frag  texture_cube.vert  textured_mesh.frag  textured_mesh.vert  triangle.vert  triangle_buffer.vert
docs/: CSM_Improvement_Plan.md  roadmap.md
docs/plans/: 2026-03-09-astrobazard-plan.md  2026-03-09-kerbal2d-design.md  2026-03-10-astrobazard-design.md  2026-03-10-astrobazard-plan.md  2026-03-10-particles-design.md  2026-03-10-particles-plan.md  2026-03-15-planet-culling-design.md  2026-03-15-procedural-planet-plan.md  2026-03-15-shadow-system-design.md  2026-03-15-shadow-system.md  2026-03-21-astro_bazard-design.md  2026-03-21-comm_link-plan.md  2026-03-21-component-registry-plan.md  2026-03-21-serialization-brainstorm.md
include/bb3d/audio/: AudioSystem.hpp
include/bb3d/core/: Base.hpp  Config.hpp  Core.hpp  Engine.hpp  EventBus.hpp  ImGuiLayer.hpp  JobSystem.hpp  JsonSerializers.hpp  Log.hpp  PickingSystem.hpp  Window.hpp
include/bb3d/input/: InputCodes.hpp  InputManager.hpp
include/bb3d/physics/: PhysicsWorld.hpp
include/bb3d/render/: Buffer.hpp  ComputePipeline.hpp  Frustum.hpp  GraphicsPipeline.hpp  IndirectBuffer.hpp  Material.hpp  Mesh.hpp  MeshGenerator.hpp  Model.hpp  ProceduralMeshGenerator.hpp  RenderTarget.hpp  Renderer.hpp  Shader.hpp  ShadowCascade.hpp  StagingBuffer.hpp  StorageBuffer.hpp  SwapChain.hpp  Texture.hpp  TextureGenerator.hpp  UniformBuffer.hpp  Vertex.hpp  VulkanContext.hpp
include/bb3d/resource/: Resource.hpp  ResourceManager.hpp
include/bb3d/scene/: Camera.hpp  ComponentRegistry.hpp  Components.hpp  Entity.hpp  Entity.inl  EntityView.hpp  FPSCamera.hpp  Frustum.hpp  OrbitCamera.hpp  Scene.hpp  SceneSerializer.hpp
scripts/: capture_window.py
src/bb3d/audio/: AudioSystem.cpp
src/bb3d/core/: Config.cpp  Engine.cpp  ImGuiLayer.cpp  JobSystem.cpp  Log.cpp  PickingSystem.cpp  Window.cpp
src/bb3d/input/: InputManager.cpp
src/bb3d/physics/: PhysicsWorld.cpp
src/bb3d/render/: Buffer.cpp  ComputePipeline.cpp  GraphicsPipeline.cpp  Material.cpp  MeshGenerator.cpp  Model.cpp  ProceduralMeshGenerator.cpp  RenderTarget.cpp  Renderer.cpp  Shader.cpp  ShadowCascade.cpp  StagingBuffer.cpp  SwapChain.cpp  Texture.cpp  TextureGenerator.cpp  UniformBuffer.cpp  VulkanContext.cpp
src/bb3d/resource/: ResourceManager.cpp
src/bb3d/scene/: Camera.cpp  Entity.cpp  FPSCamera.cpp  OrbitCamera.cpp  Scene.cpp  SceneSerializer.cpp
tests/: demo_engine.cpp  unit_test_00_infrastructure.cpp  unit_test_01_window.cpp  unit_test_02_vulkan_init.cpp  unit_test_03_core_systems.cpp  unit_test_03_swapchain.cpp  unit_test_04_hello_triangle.cpp  unit_test_05_vertex_buffer.cpp  unit_test_06_rotating_cube.cpp  unit_test_07_texture_cube.cpp  unit_test_08_core_systems.cpp  unit_test_09_core_systems.cpp  unit_test_09_resource_manager.cpp  unit_test_10_obj_loader.cpp  unit_test_11_gltf_loader.cpp  unit_test_12_ecs.cpp  unit_test_13_camera.cpp  unit_test_14_interactive_cameras.cpp  unit_test_15_editor_viewport.cpp  unit_test_15_hello_world.cpp  unit_test_16_materials.cpp  unit_test_16_pbr.cpp  unit_test_17_skybox.cpp  unit_test_18_physics_basic.cpp  unit_test_19_physics_stacks.cpp  unit_test_20_editor_viewport.cpp  unit_test_20_particles.cpp  unit_test_21_serialization.cpp  unit_test_22_full_engine.cpp  unit_test_demo_engine.cpp  unit_test_noise.cpp  unit_test_procedural_planet.cpp  unit_test_shadows.cpp
tmp/: take_shot.ps1
tools/: inspect_glb.py
